<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpACT">
    <ImageView
        android:id="@+id/img_bglogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_logo"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_firstname"
        style="@style/EditTextstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:hint="@string/firstname"/>

    <EditText
        android:id="@+id/edt_lastname"
        style="@style/EditTextstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_firstname"
        android:hint="@string/lastname"/>

    <EditText
        android:id="@+id/edt_username"
        style="@style/EditTextstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_lastname"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/edt_password"
        style="@style/EditTextstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_username"
        android:hint="@string/password" />

    <Button
        android:id="@+id/btn_register"
        style="@style/Buttonstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_password"
        android:layout_marginTop="20dp"
        android:text="@string/Register" />


</RelativeLayout>